# Game-Account-Agent

./: .env.example  .gitignore  README.md  cpp_microservice_design.md  langgraph.json  pyproject.toml  start.bat  项目文档.md
backend/agent/: __init__.py  main.py  state.py
backend/agent/common/: db.py  logging_config.py
backend/agent/tools/: __init__.py  database_tools.py  llm_tools.py
backend/api/: app.py
clear_and_add/: accounts_test_data.sql  add_datas.bat  analyze_new_data.py  clear_datas.bat  clear_tables.py  create_tables.sql  games.txt  generate_accounts_data.py  generate_data.ps1  generate_stats.py  insert_data.py  rares.txt  servers.txt  titles.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  env.d.ts  types.ts
frontend/src/components/: Chatbot.tsx  GameCard.tsx  GameGrid.tsx  Header.tsx  SearchBar.tsx
frontend/src/pages/: AccountListPage.tsx  HomePage.tsx  SearchPage.tsx
frontend/src/services/: api.ts
md_file/: to_do_features.md
md_file/backend_design/: backend.md
md_file/backend_design/mysql/: account_table_structure.md  order_table_structure.md  sessions_table_structure.md  users_table_structure.md
md_file/frontend_design/: account_list_page.md  api_interaction.md  frontend.md  frontend_design.md
order_test/cpp/: CMakeLists.txt  server.cpp
order_test/python/: requirements.txt  test_client.py
proto/: order.proto
service/service_cpp/common/: config.hpp  error_code.hpp  jwt.hpp  logger.hpp  mysql_pool.hpp  redis_client.hpp  redis_lock.hpp
service/service_cpp/order/: CMakeLists.txt  main.cpp  order_service.hpp
service/service_python/: __init__.py  order_client.py
test/jwt_test/: jwt_test.cpp
test/mysql_test/: mysql_pool_test.cpp
test/redis_test/: redis_client_test.cpp  redis_lock_test
